# libbinaryio

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json
.github/workflows/: main.yml
include/binaryio/: binaryreader.hpp  binarywriter.hpp  util.hpp
src/: CMakeLists.txt  binaryreader.cpp
